[GTK] Compilation warnings in RenderTheme https://bugs.webkit.org/show_bug.cgi?id=85286

Reviewed by Martin Robinson.

Removed un-needed code and refactored fileListNameForWidth
accordingly to avoid un-used variable warnings during compilation.

* platform/gtk/RenderThemeGtk.cpp:
(WebCore):
(WebCore::RenderThemeGtk::fileListNameForWidth):

Canonical link: https://commits.webkit.org/102931@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@115852 268f45cc-cd09-0410-ab3c-d52691b4dbfc